center align booking-form. fixes #17

--- a/app/scss/_section.scss
+++ b/app/scss/_section.scss
@@ -92,6 +92,10 @@ section {
 }
 
 #booking {
+  .booking-form {
+    max-width: 621px;
+    margin: 0 auto;
+  }
   input, textarea {
     display: block;
     width: 100%;
